--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
+  uuid: ^4.0.0
+  collection: ^1.17.0
 
 dev_dependencies:
   flutter_test:
