--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   uuid: ^4.0.0
   collection: ^1.17.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
